[package]
name = "mcm-meta-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "Parity-7.0.0"
readme = "README.md"
keywords = ["skyrim", "cli", "gaming"]

[dependencies]
byte-slice-cast = "1.2.2"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
eyre = "0.6.10"
jsonschema = "0.17.1"
log = "0.4.20"
loggerv = "0.7.2"
once_cell = "1.19.0"
owo-colors = "3.5.0"
serde_json = "1.0.108"
ucs2 = "0.3.2"
