[package]
name = "mcm-meta-helper"
version = "1.0.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "Parity-7.0.0"
readme = "README.md"
keywords = ["skyrim", "cli", "gaming"]
repository = "https://github.com/ceejbot/mcm-meta-helper"

[dependencies]
byte-slice-cast = "1.2.2"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
comfy-table = "7.1.0"
eyre = "0.6.10"
jsonschema = "0.17.1"
log = "0.4.20"
loggerv = "0.7.2"
once_cell = "1.19.0"
owo-colors = "3.5.0"
serde_json = "1.0.108"
terminal_size = "0.3.0"
ucs2 = "0.3.2"
uutils_term_grid = "0.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# The installers to generate for each app
installers = ["powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# A GitHub repo to push Homebrew formulas to
tap = "ceejbot/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
